fullSandbox11072023/force-app/main/default/objects/SPIFF__c/SPIFF__c.object-meta.xml
<CustomObject>
    <description>Special Payment Incentive For Fast Sales (SPIFFS)</description>
    <label>SPIFF</label>
    <nameField>
        <label>SPIFF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPIFFS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>