fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of the SPIFF</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>