fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>