fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>List of Product Families</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>PICCs</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>VasoNova</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>Suture</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Skin Stapling</fullName>
            </value>
            <value>
                <fullName>Chronic</fullName>
            </value>
            <value>
                <fullName>Acute</fullName>
            </value>
            <value>
                <fullName>PTD</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>D&amp;D</fullName>
            </value>
            <value>
                <fullName>Super Arrow Flex</fullName>
            </value>
            <value>
                <fullName>Ports</fullName>
            </value>
            <value>
                <fullName>Embolectomy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>