fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <description>Product of Interest</description>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>X1A</fullName>
            </value>
            <value>
                <fullName>XP1A</fullName>
            </value>
            <value>
                <fullName>P1A</fullName>
            </value>
            <value>
                <fullName>AKP1A</fullName>
            </value>
            <value>
                <fullName>Pediatric Ergo</fullName>
            </value>
            <value>
                <fullName>Custom Kits (ASK)</fullName>
            </value>
            <value>
                <fullName>MAC ErgoPack</fullName>
            </value>
            <value>
                <fullName>MAC Arrowgard</fullName>
            </value>
            <value>
                <fullName>MAC Other</fullName>
            </value>
            <value>
                <fullName>PSI ErgoPack</fullName>
            </value>
            <value>
                <fullName>PSI Arrowgard</fullName>
            </value>
            <value>
                <fullName>PSI Other</fullName>
            </value>
            <value>
                <fullName>SWG</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Thermodilution</fullName>
            </value>
            <value>
                <fullName>Twin Cath</fullName>
            </value>
            <value>
                <fullName>Other Pediatric CVCs</fullName>
            </value>
            <value>
                <fullName>Other CVCs</fullName>
            </value>
            <value>
                <fullName>Arrow PICC with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>IR Arrow PICC with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>Arrow PICC (A5)</fullName>
            </value>
            <value>
                <fullName>IR Arrow PICC (A5)</fullName>
            </value>
            <value>
                <fullName>Legacy Nursing PICC</fullName>
            </value>
            <value>
                <fullName>Legacy IR PICC</fullName>
            </value>
            <value>
                <fullName>Legacy Pressure IR PICC</fullName>
            </value>
            <value>
                <fullName>Legacy Pressure Nursing PICC</fullName>
            </value>
            <value>
                <fullName>Pressure PICC</fullName>
            </value>
            <value>
                <fullName>3 Lumen PICC</fullName>
            </value>
            <value>
                <fullName>Custom PICC (ASK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>