fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <description>What are the Terms and Conditions of the SPIFF.</description>
    <label>Terms and Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order Received</fullName>
            </value>
            <value>
                <fullName>Payment Made</fullName>
            </value>
            <value>
                <fullName>Order Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>