fullSandbox11072023/force-app/main/default/objects/SPIFF__c/fields/Your_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Your_Benefits__c</fullName>
    <description>What are the benefits</description>
    <label>Your Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>