fullSandbox11072023/force-app/main/default/objects/SPIFF__c/recordTypes/AR_NA_SPIFFS.recordType-meta.xml
<RecordType>
    <fullName>AR_NA_SPIFFS</fullName>
    <active>true</active>
    <description>A&amp;R SPIFFS</description>
    <label>AR NA SPIFFS</label>
</RecordType>