fullSandbox11072023/force-app/main/default/objects/SPIFF__c/recordTypes/IA_SPIFF.recordType-meta.xml
<RecordType>
    <fullName>IA_SPIFF</fullName>
    <active>true</active>
    <label>IA SPIFF</label>
</RecordType>