fullSandbox11072023/force-app/main/default/objects/SPIFF__c/recordTypes/Surgical_NA_SPIFFS.recordType-meta.xml
<RecordType>
    <fullName>Surgical_NA_SPIFFS</fullName>
    <active>true</active>
    <description>Surgical SPIFFS</description>
    <label>Surgical NA SPIFFS</label>
</RecordType>