fullSandbox11072023/force-app/main/default/objects/SPIFF__c/recordTypes/Vascular_NA_SPIFFS.recordType-meta.xml
<RecordType>
    <fullName>Vascular_NA_SPIFFS</fullName>
    <active>true</active>
    <description>Vascular SPIFFS</description>
    <label>Vascular NA SPIFFS</label>
</RecordType>